# color-pickplace-mycobot-using-moveit

./: .gitignore  README.md
src/hardware_jetcobot_pkg/: package.xml  setup.cfg  setup.py
src/hardware_jetcobot_pkg/hardware_jetcobot_pkg/: jetcobot_hardware_control.py  joint_control.py  joint_state_switcher.py  set_target_pos.py
src/hardware_jetcobot_pkg/launch/: jetcobot_hardware_bridge_o.launch.py  jetcobot_moveit_hardware.launch.py  real_jetcobot_o.launch.py
src/intermidiate_controller_pkg/: package.xml  setup.cfg  setup.py
src/intermidiate_controller_pkg/intermidiate_controller_pkg/: pick_place_coordinator.py
src/jetcobot_urdf/: CMakeLists.txt  package.xml
src/jetcobot_urdf/launch/: display.launch.py  display_no_jsp.launch.py
src/jetcobot_urdf/urdf/: jetcobot.urdf
src/moveit_jetcobot_pkg/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_jetcobot_pkg/config/: jetcobot.ros2_control.xacro  jetcobot.srdf  jetcobot.urdf.xacro  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/moveit_jetcobot_pkg/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_jetcobot_pkg/src/: move_to_target_pose.cpp
src/play_wth_jecobot/: package.xml  setup.cfg  setup.py
src/play_wth_jecobot/play_wth_jecobot/: arm_state_pulisher_argv.py  (+1 more)
src/tweak_turtlesim_pkg/: package.xml  setup.cfg  setup.py
src/vision_pipline_pkg/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
